--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.3
 pymysql==1.1.0
+psycopg2-binary==2.9.9
 cryptography==41.0.7
 python-dotenv==1.0.0
 werkzeug==3.0.1
