Fix Render deployment: Update Procfile and render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,7 @@ databases:
     databaseName: attendance_db
     user: attendance_user
     plan: free
+    region: oregon
 
 services:
   - type: web
@@ -13,7 +14,9 @@ services:
     runtime: python
     plan: free
     buildCommand: |
+      pip install --upgrade pip
       pip install -r requirements.txt
+    healthCheckPath: /
     startCommand: gunicorn -w 4 -b 0.0.0.0:$PORT app:app
     envVars:
       - key: PYTHON_VERSION
