--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask-SQLAlchemy==3.1.1
 Flask-Login==0.6.3
 pymysql==1.1.0
 psycopg2-binary==2.9.9
+pytz==2025.2
 cryptography==41.0.7
 python-dotenv==1.0.0
 werkzeug==3.0.1
