Add email/WhatsApp notifications for managers/directors and admin user management with role creation

--- a/env.example
+++ b/env.example
@@ -13,6 +13,17 @@ TWILIO_ACCOUNT_SID=your_twilio_account_sid
 TWILIO_AUTH_TOKEN=your_twilio_auth_token
 TWILIO_WHATSAPP_NUMBER=whatsapp:+14155238886
 
+# Email Configuration (SMTP)
+# For Gmail: Use App Password (not regular password)
+# Enable 2-factor auth, then generate App Password at: https://myaccount.google.com/apppasswords
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USE_TLS=True
+MAIL_USE_SSL=False
+MAIL_USERNAME=your-email@gmail.com
+MAIL_PASSWORD=your-app-password
+MAIL_DEFAULT_SENDER=your-email@gmail.com
+
 # Application Settings
 ATTENDANCE_CUTOFF_TIME=09:00
 
