--- a/render.yaml
+++ b/render.yaml
@@ -19,6 +19,8 @@ services:
     healthCheckPath: /
     startCommand: gunicorn -w 4 -b 0.0.0.0:$PORT app:app
     envVars:
+      - key: RENDER
+        value: "true"
       - key: SECRET_KEY
         generateValue: true
       - key: FLASK_ENV
