--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,7 @@ werkzeug==3.0.1
 twilio==8.11.0
 email-validator==2.1.0
 gunicorn==21.2.0
+# Note: WebAuthn uses browser API, no Python library needed for basic implementation
+# Full signature verification would require cryptography library (already included)
 
 
