--- a/render.yaml
+++ b/render.yaml
@@ -17,10 +17,12 @@ services:
       pip install --upgrade pip
       pip install -r requirements.txt
     healthCheckPath: /
-    startCommand: gunicorn -w 4 -b 0.0.0.0:$PORT app:app
+    startCommand: gunicorn -w 4 --timeout 120 --bind 0.0.0.0:$PORT --log-level info app:app
     envVars:
       - key: RENDER
         value: "true"
+      - key: PORT
+        generateValue: false
       - key: SECRET_KEY
         generateValue: true
       - key: FLASK_ENV
