--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,7 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-    healthCheckPath: /
+    healthCheckPath: /health
     startCommand: gunicorn -w 4 --timeout 120 --bind 0.0.0.0:$PORT --log-level info app:app
     envVars:
       - key: RENDER
